fix: kalix maven plugin with mutable list for configuration params (#1940)